--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,15 +1,16 @@
-<div class="h-100 pl-1 pr-1 max-width" style="overflow:hidden" fxLayout="column" fxLayoutAlign="start stretch">
-  
+<div class="h-100 bg-card" style="overflow:hidden;" fxLayout="column" fxLayoutAlign="start stretch">
+
     <p *ngIf="!missions || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
     <cdk-virtual-scroll-viewport itemSize="56" maxBufferPx="800" minBufferPx="800" class="h-100">
  
-            <app-list-card *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" 
-                [routerLink]="[mission.id, 'detaljer']">        
-                <mat-icon left-side>home_work</mat-icon>
-                <span fxHide.xs>{{'(' + mission.id + ') '}}</span>{{ mission.address }}
-                <mat-icon right-side>{{ mission.finished ? 'check':'chevron_right' }}</mat-icon>
-            </app-list-card>
+            <ng-container *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" >
+                <app-list-item [routerLink]="[mission.id, 'detaljer']">
+                    <mat-icon left-side>home_work</mat-icon>
+                    <span fxHide.xs>{{'(' + mission.id + ') '}}</span>{{ mission.address }}
+                </app-list-item>
+                <mat-divider></mat-divider>
+            </ng-container>
 
     </cdk-virtual-scroll-viewport>
 
