--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
@@ -1,5 +1,4 @@
-<mat-card
-    fxLayout="row" fxLayoutAlign="start stretch" class="swipe-card">
+<div fxLayout="row" fxLayoutAlign="start stretch" class="swipe-card">
 
   <div class="hidden-content">
       <ng-content select="[swipeContent]">
@@ -22,4 +21,4 @@
     </ng-content>
   </div>
 
-</mat-card>
+</div>
