--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -8,7 +8,7 @@
 
     <app-user-timesheet-list-view 
         [timesheets]="timesheets$ | async" 
-        (editClicked)="openTimesheetForm($event)"
+        (timesheetClicked)="$event?.status === 2 ? openTimesheetCard($event?.id) : openTimesheetForm($event?.id)"
         (filterClicked)="openTimesheetFilter()">
     </app-user-timesheet-list-view>
 
