--- a/projects/kbtv-client/src/app/home/home.component.html
+++ b/projects/kbtv-client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-home-top-nav>
-  <div class="p-1 max-width" style="position:relative" fxLayout="column" fxLayoutGap="8px">
+  <div class="p-1" fxLayout="column" fxLayoutGap="8px">
 
     <div fxLayout="row" fxLayoutGap="8px">
       <span class="mat-elevation-z2 foreground-card text-center p-6" fxFlex="50" matRipple
