--- a/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -1,5 +1,5 @@
 
-  <mat-toolbar fxLayout="column" fxLayoutAlign="center stretch" color="primary">
+  <mat-toolbar fxLayout="column" fxLayoutAlign="center stretch">
 
     <ng-container *ngIf="config.isOnline else offlineHeader">
       <span class="mat-small color-accent ellipsis"> Tilkoblet internett</span>
