--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -1,61 +1,51 @@
-<div class="pr-1 pl-1 max-width" *ngIf="mission">
+<div *ngIf="mission">
 
   <a *ngIf="mission.phoneNumber" href="tel:{{ mission?.phoneNumber }}">
-    <app-list-card>
+    <app-list-item>
       <mat-icon left-side>phone</mat-icon>
-      92278483
+      {{ mission.phoneNumber }}
       <ng-container right-side>
         <span class="color-accent">Ring</span>
-        <mat-icon>chevron_right</mat-icon>
       </ng-container>
-    </app-list-card>
+    </app-list-item>
+    <mat-divider></mat-divider>
   </a>
-
+ 
   <a href="https://www.google.com/maps/dir/?api=1&destination={{ mission?.address }}&travelmode=driving"
     target="_blank">
-    <app-list-card>
+    <app-list-item>
       <mat-icon left-side>directions_car</mat-icon>
       Veibeskrivelse
       <ng-container right-side>
         <span class="color-accent">Åpne kart</span>
-        <mat-icon>chevron_right</mat-icon>
       </ng-container>
-    </app-list-card>
+    </app-list-item>
+    <mat-divider></mat-divider>
   </a>
-
-  <mat-card class="mt-1">
-
-    <span class="mat-body-2 mb-2"> Ressurser</span>
-
-    <mat-divider inset="true"></mat-divider>
-
-    <app-list-item [routerLink]="['/oppdrag', mission?.id, 'detaljer','bilder']">
+ 
+  <app-list-item [routerLink]="['/oppdrag', mission?.id, 'detaljer','bilder']">
       <mat-icon left-side>photo_library</mat-icon>
       Bilder
       <ng-container right-side>
         <span *ngIf="mission.missionImages?.length">{{ mission.missionImages?.length }}</span>
-        <mat-icon>chevron_right</mat-icon>
       </ng-container>
-    </app-list-item>
-
-    <app-list-item *ifRole="permissions.MissionDocumentList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','dokumenter']">
+  </app-list-item>
+  <mat-divider></mat-divider>
+  <app-list-item *ifRole="permissions.MissionDocumentList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','dokumenter']">
       <mat-icon left-side>folder</mat-icon>
       Dokumenter
       <ng-container right-side>
         <span *ngIf="mission.missionDocuments?.length">{{ mission.missionDocuments?.length }}</span>
-        <mat-icon>chevron_right</mat-icon>
       </ng-container>
-    </app-list-item>
-
-    <app-list-item *ifRole="permissions.MissionNoteList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','notater']">
+  </app-list-item>
+  <mat-divider></mat-divider>
+  <app-list-item *ifRole="permissions.MissionNoteList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','notater']">
       <mat-icon left-side>rate_review</mat-icon>
       Notater
       <ng-container right-side>
         <span *ngIf="mission.missionNotes?.length">{{ mission.missionNotes?.length }}</span>
-        <mat-icon>chevron_right</mat-icon>
       </ng-container>
-    </app-list-item>
-
-  </mat-card>
+  </app-list-item>
+  <mat-divider></mat-divider>
 
 </div>
