--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,5 +1,5 @@
 
-<app-main-skeleton *ngIf="vm$ | async; let vm">
+<app-main-skeleton *ngIf="vm$ | async; let vm" disableElevation="true">
 
     <app-detail-top-nav-bar navbar [config]="vm.navConfig" >
     </app-detail-top-nav-bar>
