--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
@@ -3,10 +3,12 @@
     <app-main-top-nav-bar navbar [config]="navConfig" >
     </app-main-top-nav-bar>
 
-    <div class="max-width bottom-fab-padding">
-        <app-note-card *ngFor="let note of notes$ | async; trackBy: trackByNote" [note]="note" 
-            (editClicked)="openEditNoteForm($event)">
-        </app-note-card>
+    <div class="bottom-fab-padding">
+        <ng-container *ngFor="let note of notes$ | async; trackBy: trackByNote">
+            <app-note-item [note]="note" (editClicked)="openEditNoteForm($event)">         
+            </app-note-item>
+            <mat-divider></mat-divider>
+        </ng-container>
     </div>   
 
 </app-main-skeleton>
