--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.scss
@@ -1,15 +1,15 @@
 .swipe-card{
     padding:0!important;  
     overflow:hidden;
+    position:relative;
     .hidden-content{
         position:absolute;
         top:0;
         left:0;
-        height:100%
+        height:100%;
+        z-index:0!important;
     }
     .main-content{
-        position:relative;
-        z-index:1!important;
-        background:inherit;
+        position:relative;     
     }
 }
