--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -3,13 +3,16 @@
     <app-main-top-nav-bar navbar [config]="navConfig">
     </app-main-top-nav-bar>
 
-    <div class="pl-1 pr-1 max-width" *ngIf="users$ | async else loading; let users">
-        <app-list-card *ngFor="let user of users"
+    <div *ngIf="users$ | async else loading; let users;">
+        <ng-container *ngFor="let user of users; trackBy: trackByUser">
+            <app-list-item 
             (click)="goToWeekList(user)"> 
                 <mat-icon left-side>person</mat-icon>
                 {{user.firstName + ' ' +user.lastName}}
-                <mat-icon right-side>chevron_right</mat-icon>
-        </app-list-card>
+            </app-list-item>
+            <mat-divider></mat-divider>
+        </ng-container>
+        
         <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
     </div>  
 
