--- a/projects/kbtv-client/src/styles/custom-theme.scss
+++ b/projects/kbtv-client/src/styles/custom-theme.scss
@@ -40,6 +40,7 @@
 //Fix to keep items in CDK virtual scroll responsive 
 .cdk-virtual-scroll-content-wrapper{
   width:100%;
+  padding-top:8px;
   @extend .bottom-fab-padding
 }
 
